--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@ body, html {
 body {
   font-family: sans-serif;
   padding: 50px;
-  background: linear-gradient(45deg, #252525, #d6d6d6) center center no-repeat;
+  background:  #383838;
   line-height: 1.4;
 }
 
@@ -25,6 +25,7 @@ body {
   box-shadow: 0 15px 35px #3232321a,0 5px 15px #0000001a;
   transition: transform 0.3s;
   transform: translate3d(0, -1px, 0);
+  border-radius: 3% 3%;  
 }
 
 .item:hover  {
@@ -34,11 +35,13 @@ body {
 .item img {
   display: block;
   width: 100%;
-  height: auto;
-}
+  height: auto; 
+  border-radius: 3% 3%;
+} 
+
 
 .item__body {
-  padding: 5px;
+  padding: 25px;
 }
 
 .item__title {
@@ -56,57 +59,16 @@ body {
   position: relative;
 }
 
-
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-} 
-
-
-
-
-/*carousel*/
+/**
+CAROUSEL
+ */
 .carousel {
   position: relative;
 }
 
 .carousel__container {
   transition: transform 0.3s;
-  transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);  
 }
 
 .carousel__container::after {
@@ -117,14 +79,13 @@ body {
 
 .carousel__item {
   float: left; 
- 
 }
 
 .carousel__next, .carousel__prev {
   position: absolute;
   width: 40px;
   height: 40px;
-  background: rgb(180, 180, 180) url(right.svg) center center no-repeat;
+  background: #FFF url(right.svg) center center no-repeat;
   background-size:  20px 20px;
   border-radius: 50%;
   top: 50%;
@@ -149,33 +110,50 @@ body {
   opacity: 0;
 }
 
-.carousel__pagination {
-  position: absolute;
-  bottom: 0;
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
   left: 0;
-  right: 0;
-  text-align: center;
-  display: none;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.carousel__pagination__button {
-  background-color: #fff;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 0 3px;
-  box-shadow: 0 2px 5px #3232321a;
-  transition: transform 0.3s;
+/* Modal Content/Box */
+.modal-content {
+  background-color: #dadada;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 10px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  height: 60%;
+  border-radius: 1% 1%;
+  overflow-x: hidden;
+}
+
+/* The Close Button */
+.close {
+  color: rgb(141, 122, 122);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  padding-right: 10px;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
   cursor: pointer;
-}
+} 
 
-.carousel__pagination__button--active, .carousel__pagination__button:hover {
-  transform: scale(1.4);
-}
 
-@media screen and (min-width: 800px) {
-  .carousel__pagination {
-    display: block;
-  }
-}
+
+
