--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,9 +3,7 @@
   color: #FFF;
   text-decoration: none;
 }
-#carousel1 {
-  order:1;
-}
+
 body, html {
   margin: 0;
   min-height: 100%;
@@ -271,17 +269,19 @@ nav {
 .objets-sous-liste {
    list-style-type: none;
    text-align: center;
-   padding: 0 13px;   
-   background: rgb(43, 43, 43);
+   padding: 0px 13px 0px 13px; 
+   margin: -20px 0 -25px 0;
+   background: rgb(27, 27, 27);
    border-bottom: 0.5px solid rgba(167, 167, 167);
 }
 
 .objets-sous-liste:hover {
    background: rgb(156,156,156);
+   
 }
 
 .objets:hover > ul {
-   display: block; 
+   display: block;
 }
 /* FIN MENU */
 
